// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Config file generation biomeGenerator output matches snapshot 1`] = `
"// ai-guardrails:sha256=216874db2bcff6252fc304cb4ecc3adf046a00c3e8a446854e091ee355827793
{
  "linter": {
    "enabled": true,
    "rules": {
      "recommended": true
    }
  },
  "formatter": {
    "enabled": true,
    "indentStyle": "space",
    "indentWidth": 2,
    "lineWidth": 88
  },
  "javascript": {
    "formatter": {
      "quoteStyle": "double",
      "trailingCommas": "es5"
    }
  }
}"
`;

exports[`Config file generation ruffGenerator output matches snapshot 1`] = `
"# ai-guardrails:sha256=3ebc733600147c5f503166a7219694147a25d83477485aa602a618cc9ba3506d
target-version = "py311"
line-length = 88
indent-width = 2
fix = false
unsafe-fixes = false

[lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "A", "C4", "ICN", "PIE", "PT", "RSE", "SIM", "TID"]

ignore = [
  # --- Formatter conflicts (handled by ruff format) ---
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
  # --- Redundant with pyright ---
  "ANN",
  # --- Docstrings (opt-in) ---
  "D",
  # --- Development markers ---
  "FIX001",
  "FIX002",
  "TD",
  # --- High false-positive ---
  "ERA001",
  "CPY001",
  "INP001",
  "T201",
  "EM101",
  "EM102",
  "TRY003",
  "S101",
]

[lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "ARG002", "PLR2004"]
"**/__init__.py" = ["F401"]

[lint.pydocstyle]
convention = "google"

[lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[lint.isort]
force-single-line = false
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = true
force-to-top = ["__future__"]
required-imports = ["from __future__ import annotations"]

[lint.flake8-tidy-imports]
ban-relative-imports = "all"

[lint.flake8-tidy-imports.banned-api]
"typing.Optional".msg = "Use \`X | None\` instead"
"typing.Union".msg   = "Use \`X | Y\` instead"
"typing.List".msg    = "Use \`list[X]\` instead"
"typing.Dict".msg    = "Use \`dict[X, Y]\` instead"
"typing.Set".msg     = "Use \`set[X]\` instead"
"typing.Tuple".msg   = "Use \`tuple[X, ...]\` instead"

[lint.mccabe]
max-complexity = 10

[lint.pylint]
max-args = 5
max-bool-expr = 3
max-branches = 10
max-locals = 10
max-nested-blocks = 3
max-positional-args = 5
max-public-methods = 15
max-returns = 4
max-statements = 30

[lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]

[lint.flake8-pytest-style]
fixture-parentheses = true
mark-parentheses = true
parametrize-names-type = "csv"
parametrize-values-type = "list"
raises-require-match-for = ["ValueError", "TypeError", "KeyError", "RuntimeError"]

[format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 80
"
`;

exports[`Config file generation lefthook output matches snapshot for python and typescript plugins 1`] = `
"# ai-guardrails:sha256=1478adbe287cbdd96bd59447c6306e647e3bac24bbf59568d59d7f1d1dcfba22
pre-commit:
  commands:

    ruff-fix:
      glob: "*.py"
      run: ruff check --fix {staged_files} && git add {staged_files}
      stage_fixed: true
      priority: 1

    biome-fix:
      glob: "*.{ts,tsx,js,jsx}"
      run: biome check --write {staged_files} && git add {staged_files}
      stage_fixed: true
      priority: 1

    gitleaks:
      run: gitleaks protect --staged --no-banner
      fail_text: "Potential secrets detected"
      priority: 2

    codespell:
      glob: "*.{ts,md,txt,yaml,yml,toml,json,py,go,rs}"
      exclude: 'tests/fixtures/.*'
      run: codespell --check-filenames {staged_files}
      fail_text: "Spell errors found"
      priority: 2

    markdownlint:
      glob: "*.md"
      run: markdownlint-cli2 {staged_files}
      fail_text: "Markdown lint errors found"
      priority: 2

    check-suppress-comments:
      glob: "*.{py,ts,tsx,js,jsx,rs,go,cs,lua,sh,bash,zsh,ksh,c,cpp,cc,h,hpp}"
      run: ai-guardrails hook suppress-comments {staged_files}
      fail_text: "Inline suppression comments require a reason"
      priority: 2

    no-commits-to-main:
      run: |
        git rev-list --count HEAD >/dev/null 2>&1 || exit 0
        branch=$(git rev-parse --abbrev-ref HEAD 2>/dev/null) || exit 0
        if [ "$branch" = "main" ] || [ "$branch" = "master" ]; then
          echo "Direct commits to main are not allowed"
          exit 1
        fi
      fail_text: "Do not commit directly to main"
      priority: 2

commit-msg:
  commands:
    conventional:
      run: grep -qE "^(feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert)(\\(.+\\))?!?:" {1}
      fail_text: "Commit message must follow Conventional Commits format"
"
`;

exports[`Config file generation lefthook output matches snapshot for no plugins 1`] = `
"# ai-guardrails:sha256=5e52d35b8fda182ab442232761decb64538cb4128c86712ec2d67c37ba59cf06
pre-commit:
  commands:

    gitleaks:
      run: gitleaks protect --staged --no-banner
      fail_text: "Potential secrets detected"
      priority: 2

    codespell:
      glob: "*.{ts,md,txt,yaml,yml,toml,json,py,go,rs}"
      exclude: 'tests/fixtures/.*'
      run: codespell --check-filenames {staged_files}
      fail_text: "Spell errors found"
      priority: 2

    markdownlint:
      glob: "*.md"
      run: markdownlint-cli2 {staged_files}
      fail_text: "Markdown lint errors found"
      priority: 2

    check-suppress-comments:
      glob: "*.{py,ts,tsx,js,jsx,rs,go,cs,lua,sh,bash,zsh,ksh,c,cpp,cc,h,hpp}"
      run: ai-guardrails hook suppress-comments {staged_files}
      fail_text: "Inline suppression comments require a reason"
      priority: 2

    no-commits-to-main:
      run: |
        git rev-list --count HEAD >/dev/null 2>&1 || exit 0
        branch=$(git rev-parse --abbrev-ref HEAD 2>/dev/null) || exit 0
        if [ "$branch" = "main" ] || [ "$branch" = "master" ]; then
          echo "Direct commits to main are not allowed"
          exit 1
        fi
      fail_text: "Do not commit directly to main"
      priority: 2

commit-msg:
  commands:
    conventional:
      run: grep -qE "^(feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert)(\\(.+\\))?!?:" {1}
      fail_text: "Commit message must follow Conventional Commits format"
"
`;

exports[`Config file generation claudeSettingsGenerator output matches snapshot 1`] = `
"{
  "permissions": {
    "deny": [
      "Bash(rm -rf *)",
      "Bash(rm -fr *)",
      "Bash(sudo rm -rf *)",
      "Bash(sudo rm -fr *)",
      "Bash(git push --force)",
      "Bash(git push --force *)",
      "Bash(git push -f)",
      "Bash(git push -f *)",
      "Bash(git reset --hard*)",
      "Bash(git checkout -- *)",
      "Bash(git restore -- *)",
      "Bash(git clean -f*)",
      "Bash(git clean --force*)",
      "Bash(git branch -D *)",
      "Bash(git branch --delete --force *)",
      "Bash(git commit --no-verify*)",
      "Bash(git commit -n *)",
      "Bash(git commit -n)",
      "Bash(chmod -R 777*)",
      "Bash(chmod -R a+rwx*)",
      "Bash(curl * | bash)",
      "Bash(curl * | sh)",
      "Bash(curl * | zsh)",
      "Bash(curl * | dash)",
      "Bash(curl * | ksh)",
      "Bash(wget * | bash)",
      "Bash(wget * | sh)",
      "Bash(wget * | zsh)",
      "Bash(wget * | dash)",
      "Bash(wget * | ksh)",
      "Bash(eval $(*))",
      "Bash(python -c*import os*system*)"
    ]
  },
  "hooks": {
    "PreToolUse": [
      {
        "matcher": "Bash",
        "hooks": [
          {
            "type": "command",
            "command": "command -v ai-guardrails >/dev/null 2>&1 || exit 0; ai-guardrails hook dangerous-cmd"
          }
        ]
      },
      {
        "matcher": "Edit|Write|NotebookEdit",
        "hooks": [
          {
            "type": "command",
            "command": "command -v ai-guardrails >/dev/null 2>&1 || exit 0; ai-guardrails hook protect-configs"
          }
        ]
      },
      {
        "matcher": "Read",
        "hooks": [
          {
            "type": "command",
            "command": "command -v ai-guardrails >/dev/null 2>&1 || exit 0; ai-guardrails hook protect-reads"
          }
        ]
      }
    ]
  }
}"
`;
